--- a/css/style.css
+++ b/css/style.css
@@ -152,14 +152,17 @@ body {
 }
 
 /*--------------------------------------banner---------------------------------------------*/
+.box1-on {
+  height: 8px;
+}
+
 .wx-banner {
   height: 523px;
   background: pink;
-  overflow: hidden;
   position: relative;
 }
 .wx-banner #box {
-  position: relative;
+  overflow: hidden;
 }
 .wx-banner #box li {
   position: absolute;
@@ -167,6 +170,20 @@ body {
 .wx-banner #box li img {
   width: 1349px;
   height: 523px;
+}
+.wx-banner .box1 {
+  position: absolute;
+  z-index: 300;
+  top: 480px;
+  left: 550px;
+}
+.wx-banner .box1 span {
+  width: 30px;
+  height: 4px;
+  display: inline-block;
+  border: 1px solid #fff;
+  margin-left: 10px;
+  background: #fff;
 }
 .wx-banner-nav {
   position: absolute;
@@ -241,7 +258,7 @@ body {
 /*--------------------------------------conent---------------------------------------------*/
 .wx-conent {
   width: 1200px;
-  min-height: 800px;
+  min-height: 1000px;
   background: #F7F7F5;
 }
 .wx-conent-1 {
@@ -421,6 +438,108 @@ body {
 .wx-conent-4-bottom ul .wx-conent-4-bottom1:nth-of-type(3) {
   left: 794px;
 }
+.wx-conent-5 {
+  height: 800px;
+  margin-top: 20px;
+  text-align: center;
+}
+.wx-conent-5-con {
+  margin-top: 10px;
+  height: 780px;
+}
+.wx-conent-5-con-1 {
+  float: left;
+  margin-bottom: 10px;
+  margin-right: 10px;
+}
+.wx-conent-5-con-1 img {
+  width: 588px;
+  height: 380px;
+  float: left;
+}
+.wx-conent-5-con-2 .wx-conent-5-con-3, .wx-conent-5-con-2 .wx-conent-5-con-4, .wx-conent-5-con-2 .wx-conent-5-con-5, .wx-conent-5-con-2 .wx-conent-5-con-6, .wx-conent-5-con-2 .wx-conent-5-con-7, .wx-conent-5-con-2 .wx-conent-5-con-8 {
+  margin-bottom: 10px;
+  float: left;
+  width: 291px;
+  height: 380px;
+  overflow: hidden;
+  margin-right: 8px;
+}
+.wx-conent-5-con-2 .wx-conent-5-con-3 .onon, .wx-conent-5-con-2 .wx-conent-5-con-4 .onon, .wx-conent-5-con-2 .wx-conent-5-con-5 .onon, .wx-conent-5-con-2 .wx-conent-5-con-6 .onon, .wx-conent-5-con-2 .wx-conent-5-con-7 .onon, .wx-conent-5-con-2 .wx-conent-5-con-8 .onon {
+  float: left;
+  width: 291px;
+  height: 380px;
+  background: #fff;
+}
+.wx-conent-5-con-2 .wx-conent-5-con-3 .onon div, .wx-conent-5-con-2 .wx-conent-5-con-4 .onon div, .wx-conent-5-con-2 .wx-conent-5-con-5 .onon div, .wx-conent-5-con-2 .wx-conent-5-con-6 .onon div, .wx-conent-5-con-2 .wx-conent-5-con-7 .onon div, .wx-conent-5-con-2 .wx-conent-5-con-8 .onon div {
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+.wx-conent-5-con-2 .wx-conent-5-con-3 .onon div img, .wx-conent-5-con-2 .wx-conent-5-con-4 .onon div img, .wx-conent-5-con-2 .wx-conent-5-con-5 .onon div img, .wx-conent-5-con-2 .wx-conent-5-con-6 .onon div img, .wx-conent-5-con-2 .wx-conent-5-con-7 .onon div img, .wx-conent-5-con-2 .wx-conent-5-con-8 .onon div img {
+  width: 132px;
+  height: 132px;
+}
+.wx-conent-5-con-2 .wx-conent-5-con-3 .onon p, .wx-conent-5-con-2 .wx-conent-5-con-4 .onon p, .wx-conent-5-con-2 .wx-conent-5-con-5 .onon p, .wx-conent-5-con-2 .wx-conent-5-con-6 .onon p, .wx-conent-5-con-2 .wx-conent-5-con-7 .onon p, .wx-conent-5-con-2 .wx-conent-5-con-8 .onon p {
+  margin-top: 18px;
+}
+.wx-conent-5-con-2 .wx-conent-5-con-3 .onon p:nth-of-type(1), .wx-conent-5-con-2 .wx-conent-5-con-4 .onon p:nth-of-type(1), .wx-conent-5-con-2 .wx-conent-5-con-5 .onon p:nth-of-type(1), .wx-conent-5-con-2 .wx-conent-5-con-6 .onon p:nth-of-type(1), .wx-conent-5-con-2 .wx-conent-5-con-7 .onon p:nth-of-type(1), .wx-conent-5-con-2 .wx-conent-5-con-8 .onon p:nth-of-type(1) {
+  font-size: 24px;
+}
+.wx-conent-5-con-2 .wx-conent-5-con-3 .onon p:nth-of-type(2), .wx-conent-5-con-2 .wx-conent-5-con-4 .onon p:nth-of-type(2), .wx-conent-5-con-2 .wx-conent-5-con-5 .onon p:nth-of-type(2), .wx-conent-5-con-2 .wx-conent-5-con-6 .onon p:nth-of-type(2), .wx-conent-5-con-2 .wx-conent-5-con-7 .onon p:nth-of-type(2), .wx-conent-5-con-2 .wx-conent-5-con-8 .onon p:nth-of-type(2) {
+  font-size: 14px;
+}
+.wx-conent-5-con-2 .wx-conent-5-con-3 .onon p:nth-of-type(3), .wx-conent-5-con-2 .wx-conent-5-con-4 .onon p:nth-of-type(3), .wx-conent-5-con-2 .wx-conent-5-con-5 .onon p:nth-of-type(3), .wx-conent-5-con-2 .wx-conent-5-con-6 .onon p:nth-of-type(3), .wx-conent-5-con-2 .wx-conent-5-con-7 .onon p:nth-of-type(3), .wx-conent-5-con-2 .wx-conent-5-con-8 .onon p:nth-of-type(3) {
+  color: red;
+}
+.wx-conent-6 {
+  margin-top: 50px;
+  text-align: center;
+  position: relative;
+}
+.wx-conent-6 h1 {
+  margin-bottom: 30px;
+}
+.wx-conent-6 .wx-conent-6-right {
+  float: right;
+  position: absolute;
+  top: 20px;
+  right: 0;
+}
+.wx-conent-6 .wx-conent-6-right li {
+  float: left;
+  margin-right: 10px;
+}
+.wx-conent-6 .wx-conent-6-box ul li {
+  position: relative;
+  width: 282px;
+  height: 380px;
+  background: #fff;
+  float: left;
+  margin-right: 15px;
+  margin-bottom: 15px;
+}
+.wx-conent-6 .wx-conent-6-box ul li a {
+  position: absolute;
+  width: 282px;
+  height: 380px;
+  margin-left: -135px;
+}
+.wx-conent-6 .wx-conent-6-box ul li a div {
+  margin-top: 50px;
+}
+.wx-conent-6 .wx-conent-6-box ul li a div img {
+  width: 100px;
+  height: 100px;
+}
+.wx-conent-6 .wx-conent-6-box ul li a p {
+  margin-top: 20px;
+}
+.wx-conent-6 .wx-conent-6-box ul li a p:nth-of-type(1) {
+  font-size: 24px;
+}
+.wx-conent-6 .wx-conent-6-box ul li a p:nth-of-type(3) {
+  color: red;
+}
 
 .yuanxing {
   overflow: hidden;
@@ -448,6 +567,29 @@ body {
 }
 .yuanxing li:nth-of-type(5) {
   background: #1B1C21;
+}
+
+.yuanxing1 {
+  overflow: hidden;
+  text-align: center;
+  margin-left: 20px;
+}
+.yuanxing1 li {
+  display: inline-block;
+  margin-right: 8px;
+  font-size: 30px;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+}
+.yuanxing1 li:nth-of-type(1) {
+  background: #022F57;
+}
+.yuanxing1 li:nth-of-type(2) {
+  background: #DCE3E9;
+}
+.yuanxing1 li:nth-of-type(3) {
+  background: #000;
 }
 
 .on {
